--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/gray">
+    android:background="@color/light">
 
     <androidx.appcompat.widget.Toolbar
-        android:background="@color/pink"
-        app:title="My Music"
-        app:titleTextColor="@color/light"
-        app:titleTextAppearance="@style/CustomTextAppearance"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@color/pink"
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@+id/rcyAlbums"
+        app:layout_constraintStart_toStartOf="@+id/rcyAlbums"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="My Music"
+        app:titleTextAppearance="@style/CustomTextAppearance"
+        app:titleTextColor="@color/light" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcyAlbums"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="14"
+        android:paddingTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/albumToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/lightPink"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/rcyAlbums"
+        app:layout_constraintStart_toStartOf="@+id/rcyAlbums"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:visibility="invisible">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pencil"
+                android:padding="10dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/trash"
+                android:padding="10dp"/>
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
