--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/light">
+    android:background="@color/light"
+    android:id="@+id/mainLayout">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -44,6 +45,7 @@
         app:layout_constraintEnd_toEndOf="@+id/rcyAlbums"
         app:layout_constraintStart_toStartOf="@+id/rcyAlbums"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:alpha="0"
         android:visibility="invisible">
 
         <LinearLayout
