--- a/app/src/main/res/layout/card_album.xml
+++ b/app/src/main/res/layout/card_album.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="170dp"
     android:layout_height="250dp"
-    android:background="@drawable/album_background"
+    android:background="@color/light"
     android:elevation="1dp"
     android:orientation="vertical"
     app:cardCornerRadius="20dp">
