--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@color/light"
-    android:id="@+id/mainLayout">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -36,35 +36,36 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/albumToolbar"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="50dp"
-        android:background="@color/lightPink"
-        android:elevation="4dp"
+        android:background="@drawable/toolbar_background"
+        android:elevation="1dp"
+        android:alpha="0"
+        android:visibility="invisible"
+        android:layout_marginBottom="20dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/rcyAlbums"
         app:layout_constraintStart_toStartOf="@+id/rcyAlbums"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:alpha="0"
-        android:visibility="invisible">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <ImageView
+            <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/pencil"
-                android:padding="10dp"/>
+                style="?attr/actionButtonStyle"
+                android:src="@drawable/pencil" />
 
-            <ImageView
+            <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/trash"
-                android:padding="10dp"/>
+                style="?attr/actionButtonStyle"
+                android:src="@drawable/trash" />
 
         </LinearLayout>
 
