--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light">#F2F2F2</color>
     <color name="dark">#262626</color>
     <color name="gray">#888B8C</color>
+    <color name="transparent">#00000000</color>
 </resources>
