--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<gradient
-        android:angle="-90"
-        android:startColor="@color/pink"
-        android:centerColor="@color/light"
-        android:endColor="@color/light"
-        android:centerX="0.01" />-->
-    <solid android:color="@color/light"/>
+    <solid android:color="@color/lightPink"/>
     <corners android:radius="200dp"/>
-    <stroke android:color="@color/dark" android:width="2dp"/>
 </shape>
