--- a/app/src/main/res/layout/activity_album_edit.xml
+++ b/app/src/main/res/layout/activity_album_edit.xml
@@ -25,10 +25,12 @@
 
         <ImageView
             android:id="@+id/albumEditImg"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:background="@drawable/pink_border"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="20dp"
             android:src="@drawable/loading" />
 
 
@@ -36,34 +38,36 @@
             android:id="@+id/albumEditName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="10dp"
             android:text="Album Name"
             android:textColor="@color/dark"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
         <EditText
             android:id="@+id/albumEditArtist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="10dp"
             android:text="Artist Name"
             android:textColor="@color/dark"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/pink"
                 android:text="Pick a date"
-                android:background="@drawable/text_button_background"/>
+                android:textColor="@color/light"
+                android:textSize="18dp" />
 
             <EditText
                 android:id="@+id/albumEditDate"
@@ -72,7 +76,7 @@
                 android:layout_margin="20dp"
                 android:text="dd/mm/yyyy"
                 android:textColor="@color/dark"
-                android:textSize="22dp" />
+                android:textSize="18dp" />
         </LinearLayout>
     </LinearLayout>
 
