--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -13,12 +13,24 @@
         <action
             android:id="@+id/action_albumListFragment_to_tracklistFragment"
             app:destination="@id/tracklistFragment" />
+        <action
+            android:id="@+id/action_albumListFragment_to_albumEditFragment"
+            app:destination="@id/albumEditFragment" />
     </fragment>
     <fragment
         android:id="@+id/tracklistFragment"
         android:name="org.milaifontanals.musicapp.view.TracklistFragment"
         android:label="fragment_tracklist"
         tools:layout="@layout/fragment_tracklist" >
+        <argument
+            android:name="id"
+            app:argType="long" />
+    </fragment>
+    <fragment
+        android:id="@+id/albumEditFragment"
+        android:name="org.milaifontanals.musicapp.view.AlbumEditFragment"
+        android:label="fragment_album_edit"
+        tools:layout="@layout/fragment_album_edit" >
         <argument
             android:name="id"
             app:argType="long" />
