--- a/app/src/main/res/layout/fragment_album_edit.xml
+++ b/app/src/main/res/layout/fragment_album_edit.xml
@@ -4,81 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment_album_edit"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.AlbumEditFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/albumEditToolbar"
+
+    <ImageView
+        android:id="@+id/albumEditImg"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/pink_border"
+        android:src="@drawable/loading" />
+
+
+    <EditText
+        android:id="@+id/albumEditName"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/pink"
-        app:title="Edit Album"
-        app:titleTextAppearance="@style/CustomTextAppearance"
-        app:titleTextColor="@color/light" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="10dp"
+        android:text="Album Name"
+        android:textColor="@color/dark"
+        android:textSize="18dp" />
+
+    <EditText
+        android:id="@+id/albumEditArtist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="10dp"
+        android:text="Artist Name"
+        android:textColor="@color/dark"
+        android:textSize="18dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="12"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-
-        <ImageView
-            android:id="@+id/albumEditImg"
-            android:background="@drawable/pink_border"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/loading" />
-
-
-        <EditText
-            android:id="@+id/albumEditName"
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginVertical="10dp"
-            android:text="Album Name"
-            android:textColor="@color/dark"
+            android:backgroundTint="@color/pink"
+            android:text="Pick a date"
+            android:textColor="@color/light"
             android:textSize="18dp" />
 
         <EditText
-            android:id="@+id/albumEditArtist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginVertical="10dp"
-            android:text="Artist Name"
-            android:textColor="@color/dark"
-            android:textSize="18dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/albumEditDate"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/pink"
-                android:text="Pick a date"
-                android:textColor="@color/light"
-                android:textSize="18dp" />
-
-            <EditText
-                android:id="@+id/albumEditDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="dd/mm/yyyy"
-                android:textColor="@color/dark"
-                android:textSize="18dp" />
-        </LinearLayout>
+            android:text="dd/mm/yyyy"
+            android:textColor="@color/dark"
+            android:textSize="18dp" />
     </LinearLayout>
-
 </LinearLayout>
