--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,10 @@
 <resources>
     <style name="CustomTextAppearance">
         <item name="android:fontFamily">sans-serif-black</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">22dp</item>
+    </style>
+
+    <style name="DrawerStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/light</item>
     </style>
 </resources>
