--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,10 @@
         <!-- Customize your light theme here. -->
         <item name="android:forceDarkAllowed">false</item>
         <item name="android:statusBarColor">@color/black</item>
+        <item name="drawerArrowStyle">@style/DrawerStyle</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+
 
     <style name="Theme.MusicAppNoFragments" parent="Base.Theme.MusicAppNoFragments" />
 </resources>
