--- a/app/src/main/res/layout/fragment_download_main.xml
+++ b/app/src/main/res/layout/fragment_download_main.xml
@@ -39,6 +39,7 @@
     </RadioGroup>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcyArtists"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
