--- a/app/src/main/res/layout/fragment_download_main.xml
+++ b/app/src/main/res/layout/fragment_download_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/light"
     tools:context=".view.DownloadMainFragment">
 
     <LinearLayout
@@ -13,12 +14,14 @@
         android:padding="10dp">
 
         <TextView
+            android:textColor="@color/dark"
             android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search: " />
 
         <EditText
+            android:textColor="@color/dark"
             android:id="@+id/edtSearch"
             android:layout_width="match_parent"
             android:layout_height="50dp"/>
@@ -27,7 +30,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:padding="10dp"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="30dp"
         android:layout_height="wrap_content">
 
         <RadioGroup
@@ -39,6 +43,7 @@
 
             <RadioButton
                 android:id="@+id/radio_artists"
+                android:textColor="@color/dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
@@ -48,6 +53,7 @@
             <RadioButton
                 android:id="@+id/radio_albums"
                 android:layout_width="0dp"
+                android:textColor="@color/dark"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Albums" />
@@ -56,6 +62,8 @@
         <Button
             android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
+            android:background="@drawable/text_button_background"
+            android:textColor="@color/light"
             android:layout_height="wrap_content"
             android:text="Search"/>
     </LinearLayout>
