--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -32,5 +32,14 @@
         android:id="@+id/downloadMainFragment"
         android:name="org.milaifontanals.musicapp.view.DownloadMainFragment"
         android:label="fragment_download_main"
-        tools:layout="@layout/fragment_download_main" /><action android:id="@+id/action_global_downloadMainFragment" app:destination="@id/downloadMainFragment"/>
+        tools:layout="@layout/fragment_download_main" >
+        <action
+            android:id="@+id/action_downloadMainFragment_to_downloadAlbumsFragment"
+            app:destination="@id/downloadAlbumsFragment" />
+    </fragment><action android:id="@+id/action_global_downloadMainFragment" app:destination="@id/downloadMainFragment"/>
+    <fragment
+        android:id="@+id/downloadAlbumsFragment"
+        android:name="org.milaifontanals.musicapp.view.DownloadAlbumsFragment"
+        android:label="fragment_download_albums"
+        tools:layout="@layout/fragment_download_albums" />
 </navigation>
