--- a/app/src/main/res/layout/fragment_album_edit.xml
+++ b/app/src/main/res/layout/fragment_album_edit.xml
@@ -48,6 +48,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/datePickerBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/pink"
@@ -60,8 +61,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:enabled="false"
             android:text="dd/mm/yyyy"
             android:textColor="@color/dark"
             android:textSize="18dp" />
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/albumEditSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/lightPink"
+        android:visibility="invisible"
+        android:text="Save"
+        android:textColor="@color/light"
+        android:textSize="18dp" />
 </LinearLayout>
