--- a/app/src/main/res/layout/fragment_tracklist.xml
+++ b/app/src/main/res/layout/fragment_tracklist.xml
@@ -1,80 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/light"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.TracklistFragment">
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:background="@color/lightPink"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="@color/lightPink"
+            android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                app:cardCornerRadius="70dp"
-                android:layout_gravity="center"
-                android:background="@color/light">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/albumImgTracklist"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:background="@color/light"
+                    app:cardCornerRadius="70dp">
+
+                    <ImageView
+                        android:id="@+id/albumImgTracklist"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/light"
+                        android:src="@drawable/loading" />
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
+
+                <TextView
+                    android:id="@+id/albumArtistTracklist"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/loading"
-                    android:background="@color/light"/>
+                    android:layout_height="wrap_content"
+                    android:text="Artist Name"
+                    android:textColor="@color/dark"
+                    android:textSize="14dp" />
 
-            </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/albumTitleTracklist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Album Title"
+                    android:textColor="@color/dark"
+                    android:textSize="22dp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingLeft="10dp">
-
-            <TextView
-                android:id="@+id/albumArtistTracklist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Artist Name"
-                android:textColor="@color/dark"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/albumTitleTracklist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-black"
-                android:text="Album Title"
-                android:textColor="@color/dark"
-                android:textSize="22dp" />
+            </LinearLayout>
 
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+
+            android:id="@+id/rcyTracklist"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="12" />
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/rcyTracklist"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="12" />
+    <ImageButton
+        android:id="@+id/fab"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="20dp"
+        android:background="@drawable/floating_button_background"
+        android:src="@drawable/add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
