--- a/app/src/main/res/layout/fragment_album_edit.xml
+++ b/app/src/main/res/layout/fragment_album_edit.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginVertical="10dp"
-        android:text="Album Name"
+        android:text=""
         android:textColor="@color/dark"
         android:textSize="18dp" />
 
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
         android:layout_marginVertical="10dp"
-        android:text="Artist Name"
+        android:text=""
         android:textColor="@color/dark"
         android:textSize="18dp" />
 
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:enabled="false"
-            android:text="dd/mm/yyyy"
+            android:text="DD/MM/YYYY"
             android:textColor="@color/dark"
             android:textSize="18dp" />
     </LinearLayout>
