--- a/app/src/main/res/layout/dialog_track.xml
+++ b/app/src/main/res/layout/dialog_track.xml
@@ -99,6 +99,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btnCancel"
             android:background="@color/transparent"
             android:textColor="@color/dark"
             android:layout_width="0dp"
@@ -108,6 +109,7 @@
 
 
         <Button
+            android:id="@+id/btnSave"
             android:background="@color/transparent"
             android:textColor="@color/dark"
             android:layout_width="0dp"
