--- a/app/src/main/res/layout/dialog_track.xml
+++ b/app/src/main/res/layout/dialog_track.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/txtDialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
