--- a/app/src/main/res/layout/fragment_tracklist.xml
+++ b/app/src/main/res/layout/fragment_tracklist.xml
@@ -9,6 +9,7 @@
     tools:context=".view.TracklistFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -83,6 +84,53 @@
             android:layout_weight="12" />
 
     </LinearLayout>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/trackToolbar"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:alpha="0"
+        android:background="@drawable/toolbar_background"
+        android:elevation="1dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:visibility="invisible"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <LinearLayout
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnEditTrack"
+                style="?attr/actionButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="8dp"
+                android:src="@drawable/pencil" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/line" />
+
+            <ImageButton
+                android:id="@+id/btnRmTrack"
+                style="?attr/actionButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:src="@drawable/trash" />
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <ImageButton
