--- a/app/src/main/res/layout/card_album_download.xml
+++ b/app/src/main/res/layout/card_album_download.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/albumCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
