--- a/app/src/main/res/layout/fragment_download_albums.xml
+++ b/app/src/main/res/layout/fragment_download_albums.xml
@@ -35,7 +35,7 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/albumToolbar"
+        android:id="@+id/downloadAlbumToolbar"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
@@ -54,7 +54,7 @@
             android:scaleX="0.8"
             android:scaleY="0.8"
             android:layout_gravity="center"
-            android:id="@+id/btnEditAlbum"
+            android:id="@+id/btnDownloadAlbum"
             style="?attr/actionButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
