--- a/app/src/main/res/layout/row_download.xml
+++ b/app/src/main/res/layout/row_download.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:orientation="horizontal"
+    android:id="@+id/rowDownload"
     android:background="@color/light">
 
     <ImageView
